welcome.lessons.welcome.variables.Variables.scala.error
Variables:8: error: not found: value PrendBiscuit
PrendBiscuit()
^Variables:11: error: not found: value xhile
xhile (dejaFait < nbPas) {
^