welcome.lessons.welcome.variables.Variables.scala.code
var nbPas = 0
var dejaFait = 0
while (!estSurBiscuit()) {
	avance()
	nbPas = nbPas + 1
}//vas jusqu'au biscuit
PrendBiscuit()
droite()
droite()//demi tour
xhile (dejaFait < nbPas) {
	avance()
	dejaFait = dejaFait + 1
}
poseBiscuit()